Java 21 Gradle Improved Calculator: functions, constants